# photophore

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: index.md  install.md  ops.md
docs/adr/: ADR-0001-trust-store-separation-from-audit-log.md  ADR-0002-no-shadow-caching.md  index.md
python/: Makefile  README.md  pyproject.toml
python/src/photophore/: __init__.py  core.py  errors.py  logging.py  version.py
python/src/photophore/audit/: __init__.py  _anchor.py  _chain.py  _cli_invocation.py  _schema.py  _store.py  _types.py
python/src/photophore/channels/: __init__.py  _bootstrap.py  _index.py  _keystore.py  _store.py  _types.py
python/src/photophore/classifier/: __init__.py  _default.py  _engine.py  _patterns.py  _rules.py  _tags.py  _types.py
python/src/photophore/cli/: __init__.py  _audit_decorator.py  _errors.py  _format.py  audit_cmds.py  channel_cmds.py  classify_cmds.py  dispatch_cmds.py  policy_cmds.py
python/src/photophore/dispatch/: __init__.py  _aio.py  _coordinator.py  _errors.py  _transport.py
python/src/photophore/policy/: __init__.py  _author.py
python/src/photophore/shadow/: __init__.py  _generate.py  _quality.py  _strategies.py  _types.py
python/tests/: conftest.py  test_audit_anchor.py  test_audit_chain.py  test_audit_chain_property.py  test_audit_export.py  test_audit_query.py  test_audit_schema.py  test_channels_bootstrap.py  test_channels_keystore.py  test_channels_lifecycle.py  test_channels_separation.py  test_classifier_default_property.py  test_classifier_engine.py  test_classifier_priority.py  test_classifier_rules.py  test_classifier_tags.py  test_cli_audit.py  test_cli_channel.py  test_cli_classify.py  test_cli_error_messages.py  test_cli_invocation_audit.py  test_cli_policy.py  test_logging_filter.py  test_policy_author.py  test_policy_violation.py  test_sensitive_redaction.py  test_shadow_generate.py  test_shadow_no_caching.py  test_shadow_quality.py  test_shadow_strategies.py  test_shadow_types.py  test_shadow_uniqueness_property.py
python/tests/at_negative/: test_at_a1_compromised_sovereign.py  test_at_a2_shadow_correlation.py  test_at_a3_classifier_evasion.py  test_at_a4_channel_mitm.py  test_at_a5_trust_store_tampering.py  test_at_a6_audit_log_tamper.py
python/tests/cli/: test_channel_cmds.py
python/tests/dispatch/: conftest.py  test_dispatch_at_a1.py  test_dispatch_cli.py  test_dispatch_coordinator.py  test_dispatch_enforcement.py  test_dispatch_errors.py  test_dispatch_sp33.py
python/tests/fixtures/: rules-malformed.yaml  rules-no-catchall.yaml  rules-valid.yaml  task-draft-with-injected-policy.json  task-draft.json
python/tests/integration/: __init__.py  conftest.py  test_e2e_at_a1_replay.py  test_e2e_describe_forge_happy.py  test_e2e_forged_receipt.py  test_e2e_pi_forge_happy.py  test_e2e_poisoned_audit.py  test_e2e_policy_violated.py  test_property_dispatch_shadow_uniqueness.py
python/tests/tools/: test_ast_lint_network_isolation.py
tools/: ast_lint_no_print.py  at_coverage.py
