[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "photophore"
version = "0.3.1"
description = "Photophore privacy policy engine — channels, audit log, classifier, shadows, policy."
requires-python = ">=3.11"
license = { text = "MIT" }
readme = "README.md"
authors = [
    { name = "Thermocline Suite contributors" },
]
keywords = ["photophore", "privacy", "policy", "audit", "channels", "thermocline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "thermocline>=0.3.1",
    "blake3>=1.0.8",
    "click>=8.3",
    "keyring>=25.0",
    "pyyaml>=6.0",
    "pathspec>=1.1.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "pip-audit",
    "pytest-asyncio>=0.23",
]

[project.scripts]
photophore = "photophore.cli:photophore"

[project.urls]
Homepage = "https://github.com/dom/photophore"
Repository = "https://github.com/dom/photophore"

[tool.hatch.build.targets.wheel]
packages = ["src/photophore"]

[tool.hatch.build.targets.sdist]
include = [
    "src/photophore",
    "README.md",
    "pyproject.toml",
]

[tool.mypy]
strict = true
python_version = "3.11"
packages = ["photophore"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
